# drinkx-crm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUTOPILOT.md  CLAUDE.md  Makefile  README.md  manifest  package.json  pnpm-lock.yaml  skills-lock.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: config.py  db.py  main.py  observability.py
apps/api/config/: drinkx_profile.yaml  news_sources.yaml
apps/api/scripts/: build_foodmarkets_data.py  create_test_user.py  import_prototype_data.py  issue_service_key.py
apps/api/tests/: conftest.py  test_0002_b2b_models.py  test_activities_crud.py  test_activity_task_authz.py  test_ai_budget_guard.py  test_audit.py  test_auth_bootstrap.py  test_auth_role_guard.py  test_auto_create_lead_from_email.py  test_automation_builder_service.py  test_automation_channel_visibility.py  test_automation_multistep.py  test_automation_reliability.py  test_backfill.py  test_bitrix24_adapter.py  test_bulk_update.py  test_celery_wiring.py  test_company.py  test_company_managers.py  test_company_merge.py  test_contacts_crud.py  test_credentials_crypto.py  test_custom_attributes_service.py  test_daily_plan_routes.py  test_daily_plan_runner.py  test_daily_plan_service.py  test_email_context_in_brief.py  test_email_digest.py  test_email_sender.py  test_enrichment_budget.py  test_enrichment_kb.py  test_enrichment_orchestrator.py  test_enrichment_profile.py  test_enrichment_routes.py  test_exporters.py  test_external_auth.py  test_external_keys.py  test_external_mcp.py  test_external_read.py  (+67 more)
(+710 files in other folders)
